--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,6 +1,6 @@
 @article{sql,
-title={SQLite Documentation},
-author={SQLite Development Team},
+title={{SQLite Documentation}},
+author={{SQLite Development Team}},
 year={2024},
 url={https://www.sqlite.org/docs.html}
 }
@@ -11,3 +11,14 @@ author={Zelle, John M.},
 year={2024},
 publisher={Franklin, Beedle & Associates Inc.}
 }
+
+@misc{prj_hammer, 
+title={Project Hammer}, 
+url={https://jacobfilipp.com/hammer/}, 
+journal={Jacobfilipp.com}, 
+author={Jacob Filipp}, 
+year={2024}, 
+month={Nov} 
+}
+
+‌
